--- a/module.yml
+++ b/module.yml
@@ -1,7 +1,7 @@
 author: Bart Vanbrabant <bart@impera.io>
 license: Apache 2.0
 name: graph
-source: git@git.impera.io:modulesb/graph
-version: 0.1.2
-requires: 
+source: git@git.impera.io:modules/graph
+version: 0.1.3
+requires:
     std: git@git.impera.io:modules/std, ">= 0.4"
