--- a/module.yml
+++ b/module.yml
@@ -1,7 +1,6 @@
-author: Bart Vanbrabant <bart@impera.io>
+author: Inmanta <code@inmanta.com>
 license: Apache 2.0
 name: graph
-source: git@git.impera.io:modules/graph
-version: 0.1.3
+version: 0.1.4
 requires:
-    std: git@git.impera.io:modules/std, ">= 0.4"
+- std
