--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,8 @@
 # W503 line break before binary operator
 # Note: E203 whitespaces and the slice operator. black and flake disagree
 # Note: F722 because many inmanta types are seen as forward declarations
-ignore = H405,H404,H302,H306,H301,H101,E252,E203,F722,W503
+# Note: N818 error suffix in exception names
+ignore = H405,H404,H302,H306,H301,H101,E252,E203,F722,W503,N818
 
 # These inmanta primitive types will throw F821 in annotations
 # see: http://flake8.pycqa.org/en/latest/user/options.html#cmdoption-flake8-builtins
